[package]
name = "oxlogger_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
